fixed-z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,7 @@ body{
   text-align: center;
   cursor: pointer;
   transition: all 0.3s;
+
   .linked{
     margin-top: 30px;
     width: 70px;
@@ -115,6 +116,7 @@ body{
     box-shadow: $box-shadow;
     margin-top: 10%;
     width: 45%;
+    z-index: 99999;
     .navbar-drum{
       width: 100%;
       height: 20px;
